# pynamodb-mypy

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
pynamodb_mypy/: __init__.py  _private_api.py  plugin.py
tests/: __init__.py  conftest.py  mypy.ini  mypy_helpers.py  test_plugin.py
