[metadata]
name = pynamodb-mypy
version = 0.0.2
description = mypy plugin for PynamoDB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/lyft/pynamodb-mypy
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
maintainer = Ilya Konstantinov
maintainer_email = ilya.konstantinov@gmail.com

[options]
packages = find:
install_requires =
    mypy>=0.770
python_requires = >=3.6

[options.packages.find]
exclude =
    tests

[flake8]
format = pylint
exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv
max-complexity = 10
max-line-length = 120

[tool:pytest]
addopts = --cov=pynamodb_mypy --cov-report=term-missing:skip-covered -vvv

[coverage:run]
branch = True

[coverage:report]
fail_under = 100
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True
strict_optional = True
warn_no_return = True

[mypy-tests.*]
disallow_untyped_defs = False
